--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
  <head>
  <title>Search</title>
+ <link rel="stylesheet" href="style.css">git
  </head>
  <body>
+    <section>
+        <header>
+    <BODY BGCOLOR=“#FFFFFFF”></BODY>
  <form action="https://www.google.com/search">
- <input type="text" name="q">
- <input type="submit" value="Google Search">
+    <input type="text" name="q">
+  <input type="submit" value="Google Search">
+  <right><A HREF="image.html">Image search</A> <A HREF="image.html">Advanced search</A></right>
+  <right><P>I'm feeling lucky</P></right>
  </form>
  </body>
 </html>
