A home page reconstructed

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
- <title>Search</title>
- </head>
- <body>
- <form action="https://www.google.com/search">
- <input type="text" name="q">
- <input type="submit" value="Google Search">
- </form>
- </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Search</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div style="text-align: right; margin-top: 1rem; margin-right: 1rem;">
+
+        <a href="imageSearch.html" style="text-decoration: none; color: black; margin-right: 0.6rem">Image Search</a>
+        <a href="advancedSearch.html" style="text-decoration: none; color: black;">Advanced Search</a>
+
+    </div>
+    <div class="logo"></div>
+    <div class="search-input">
+        <form action="https://www.google.com/search">
+            <input type="text" name="q">
+        
+        <div class="buttons">
+            <center>
+                <input type="submit" nname="btnK" value="Google Search">
+                <input type="submit" name="btnI" value="I'm Feeling Lucky">
+            </center>
+        </div>
+        </form>
+    </div>
+</body>
+
 </html>
