--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Descriptions" content="Google, Search, Find, Locate">
+    <meta name="Author" content="Moshi">
     <title>Google Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
